<resources>
    <string name="app_name" translatable="false">SimpleWeather</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="temp_min_label">min:</string>
    <string name="temp_max_label">max:</string>
    <string name="first_load_can_take_around_a_minute_to_complete">First load can take around a minute to complete</string>
    <string name="option_refresh">Refresh</string>
    <string name="option_settings">Settings</string>
    <string name="option_about">About</string>
    <string name="about_main">Application was created for practicing purposes.</string>
    <string name="about_icon">"Icons from "</string>
    <string name="about_icon_link" translatable="false">www.freepik.com</string>
    <string name="about_api">"Weather API from "</string>
    <string name="about_api_link" translatable="false">openweathermap.org</string>
    <string name="no_city_selected">No city selected</string>
    <string name="rate_dialog_title">Rate %s</string>
    <string name="rate_content">If you enjoy using %s, please take a moment to rate it.\nThanks for your support!</string>
    <string name="rate_btn">Rate</string>
    <string name="rate_skip_btn">Later</string>
    <string name="rate_hide_btn">No, thanks</string>
    <string name="location_hint">Enter city name. E.g. Springfield</string>
    <string name="widget_no_city">No city is selected.\nPlease tap on widget and select city</string>
</resources>
