<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.artycake.simpleweather.activities.AboutActivity">

    <TextView
        android:id="@+id/about_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_main"/>

    <TextView
        android:id="@+id/about_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_main"
        android:text="@string/about_icon"
        />

    <TextView
        android:id="@+id/about_icon_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_main"
        android:layout_toEndOf="@id/about_icon"
        android:layout_toRightOf="@id/about_icon"
        android:text="@string/about_icon_link"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/about_api"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_icon"
        android:text="@string/about_api"
        />

    <TextView
        android:id="@+id/about_api_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_icon"
        android:layout_toEndOf="@id/about_api"
        android:layout_toRightOf="@id/about_api"
        android:text="@string/about_api_link"
        android:textColor="@color/colorPrimary"
        />

</RelativeLayout>
