<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.artycake.simpleweather.activities.MainActivity">

    <TextView
        android:id="@+id/city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/no_city_selected"
        android:textColor="@color/colorTextIcons"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/week_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Today"
        android:textColor="@color/colorPrimaryLight"
        />

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/temp_min_label"
                android:textColor="@color/colorTextIcons"/>

            <TextView
                android:id="@+id/temperature_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="--°C"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorTextIcons"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/temp_max_label"
                android:textColor="@color/colorTextIcons"/>

            <TextView
                android:id="@+id/temperature_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="--°C"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorTextIcons"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/current_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="--°C"
        android:textColor="@color/colorTextIcons"
        android:textSize="90sp"
        />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/weather_icon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:scaleType="fitCenter"
        android:tint="@color/colorTextIcons"
        app:srcCompat="@drawable/ic_na"
        />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorTextIcons"
        android:textSize="30sp"
        android:gravity="center"
        tools:text="Рассеянная облачность"/>

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <FrameLayout
            android:id="@+id/container_second_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <FrameLayout
            android:id="@+id/container_third_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <FrameLayout
            android:id="@+id/container_fourth_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />


    </LinearLayout>
</LinearLayout>
